tests/errors/variant_flow/structured/structured_downcast_variant_not_refined_at_stmt_span.err.expected
error: at 6:17: [VF-DowncastVariantNotRefined] In function 'f', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
   |
 6 |                 x = copy o as Some;
   |                 ^^^^^^^^^^^^^^^^^^
